Ignore OK "sent" to user if it is connection termination (BUG#38492).